# timecopilot-f1-2026-forecast

./: .gitignore  F1 Timeseries Pipeline.py  LICENSE  README.md  backtest_abudhabi_2025.py  backtest_azerbaijan_2025.py  backtest_belgium_2025.py  backtest_monaco_2025.py  generate_post_images.py  pyproject.toml  run_f1_forecast.py
.github/workflows/: f1_predictions.yml
docs/: index.html
docs/races/abu_dhabi_2025/: index.html
f1_pipeline/: __init__.py
f1_pipeline/collectors/: __init__.py  calendar_manager.py  historical_collector.py  jolpica_collector.py  openf1_collector.py  race_weekend_collector.py  weather_fetcher.py  weather_log.py
f1_pipeline/features/: __init__.py  championship_series.py  circuit_series.py  session_features.py  strategy_features.py
f1_pipeline/forecasting/: __init__.py  championship_forecaster.py  orchestrator.py  race_forecaster.py  race_weekend_updater.py
f1_pipeline/reporting/: report_generator.py
reports/: accuracy_log.csv  weather_log.csv
reports/abu_dhabi_2025/: linkedin_post_fp1.md  linkedin_post_fp2.md  linkedin_post_fp3.md  linkedin_post_post_race.md  linkedin_post_pre_weekend.md  linkedin_post_qualifying.md  social_card_fp1.txt  social_card_fp2.txt  social_card_fp3.txt  social_card_post_race.txt  social_card_pre_weekend.txt  social_card_qualifying.txt
reports/australia_2026/: championship_final_standings.csv  championship_forecast.json  constructor_championship_standings.csv  linkedin_post_fp2.md  linkedin_post_post_race.md  linkedin_post_pre_weekend.md  linkedin_post_qualifying.md  race_forecast_fp2.json  race_forecast_pre_weekend.json  race_forecast_qualifying.json  race_results_post_race.json  social_card_fp2.txt  social_card_post_race.txt  social_card_pre_weekend.txt  social_card_qualifying.txt  top10_fp2.csv  top10_pre_weekend.csv  top10_qualifying.csv
reports/azerbaijan_2025/: linkedin_post_fp1.md  linkedin_post_fp2.md  linkedin_post_fp3.md  linkedin_post_post_race.md  linkedin_post_pre_weekend.md  linkedin_post_qualifying.md  social_card_fp1.txt  social_card_fp2.txt  social_card_fp3.txt  social_card_post_race.txt  social_card_pre_weekend.txt  social_card_qualifying.txt  top10_fp1.csv  top10_fp3.csv  top10_pre_weekend.csv  top10_qualifying.csv
reports/bahrain_2026/: championship_final_standings.csv  constructor_championship_standings.csv  linkedin_post_post_race.md  social_card_post_race.txt
reports/belgium_2025/: linkedin_post_fp1.md  linkedin_post_fp2.md  linkedin_post_fp3.md  linkedin_post_post_race.md  linkedin_post_pre_weekend.md  linkedin_post_qualifying.md  social_card_fp1.txt  social_card_fp2.txt  social_card_fp3.txt  social_card_post_race.txt  social_card_pre_weekend.txt  social_card_qualifying.txt  top10_fp2.csv  top10_pre_weekend.csv  top10_qualifying.csv
reports/china_2026/: championship_final_standings.csv  constructor_championship_standings.csv  linkedin_post_post_race.md  linkedin_post_qualifying.md  linkedin_post_sprint_qualifying.md  race_forecast_qualifying.json  race_forecast_sprint_qualifying.json  race_results_post_race.json  social_card_post_race.txt  social_card_qualifying.txt  social_card_sprint_qualifying.txt  top10_qualifying.csv  top10_sprint_qualifying.csv
reports/japan_2026/: championship_final_standings.csv  championship_forecast.json  constructor_championship_standings.csv  linkedin_post_fp2.md  linkedin_post_post_race.md  linkedin_post_pre_weekend.md  linkedin_post_qualifying.md  race_forecast_fp2.json  race_forecast_pre_weekend.json  race_forecast_qualifying.json  race_results_post_race.json  social_card_fp2.txt  social_card_post_race.txt  social_card_pre_weekend.txt  social_card_qualifying.txt  top10_fp2.csv  top10_pre_weekend.csv  top10_qualifying.csv
reports/monaco_2025/: linkedin_post_fp1.md  linkedin_post_fp2.md  linkedin_post_fp3.md  linkedin_post_post_race.md  linkedin_post_pre_weekend.md  linkedin_post_qualifying.md  social_card_fp1.txt  social_card_fp2.txt  social_card_fp3.txt  social_card_post_race.txt  social_card_pre_weekend.txt  social_card_qualifying.txt  top10_fp2.csv  top10_fp3.csv  top10_pre_weekend.csv  top10_qualifying.csv
reports/saudi_arabia_2026/: championship_final_standings.csv  constructor_championship_standings.csv  linkedin_post_fp2.md  linkedin_post_post_race.md  linkedin_post_qualifying.md  race_forecast_fp2.json  race_forecast_qualifying.json  social_card_fp2.txt  social_card_post_race.txt  social_card_qualifying.txt  top10_fp2.csv  top10_qualifying.csv
scripts/: generate_github_pages.py
(+8 files in other folders)
